Fix alignment of unknown thumbnail

--- a/backend/instruments/static/instruments/styles/style.css
+++ b/backend/instruments/static/instruments/styles/style.css
@@ -180,8 +180,8 @@ td, th {
   border-radius: 3px;
   width: 35px;
   height: 35px;
+  line-height: 35px;
   background-color: #eee;
-  line-height: 32px;
   text-align: center;
   color: #bbb;
   font-weight: bold;
